5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1643_1053.log
== TEST (2019-04-08 19:04:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if ("cervo"=harry ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"

print(eleitor)
-- ERROR:
File "XXXX", line 6
    if ("cervo"=harry ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:04:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if ("cervo" = "harry" ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"

print(eleitor)
-- ERROR:
File "XXXX", line 6
    if ("cervo" = "harry" ):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:07:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if ("cervo" = "harry" ):
	cervo eh patronoo do harry potter= "eleitor"
else:
nao eh patrono do harry = "nao_eleitor"

print()
-- ERROR:
File "XXXX", line 6
    if ("cervo" = "harry" ):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:08:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =("entre com patrono")

if ("cervo" = "harry" ):
	cervo eh patronoo do harry potter= "eleitor"
else:
nao eh patrono do harry = "nao_eleitor"

print()
-- ERROR:
File "XXXX", line 6
    if ("cervo" = "harry" ):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:10:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =("entre com patrono")

if('cervo' = 'harry'	 ):
	cervo eh patronoo do harry potter= "eleitor"
else:
nao eh patrono do harry = "nao_eleitor"

print()
-- ERROR:
File "XXXX", line 6
    if('cervo' = 'harry'	 ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:10:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =("entre com patrono")

if('cervo') = ('harry'):
	cervo eh patronoo do harry potter= "eleitor"
else:
nao eh patrono do harry = "nao_eleitor"

print()
-- ERROR:
File "XXXX", line 6
    if('cervo') = ('harry'):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:11:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =("entre com patrono")
if('cervo') = ('harry'):
	cervo eh patronoo do harry potter= "eleitor"
else:
nao eh patrono do harry = "nao_eleitor"

print()
-- ERROR:
File "XXXX", line 5
    if('cervo') = ('harry'):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")
if: (harry =="carvo")
	mensagem = "cervo eh patronoo do harry potter"
else:
mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- ERROR:
File "XXXX", line 5
    if: (harry =="carvo")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:13:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")
if: (harry =="carvo"):
	mensagem = "cervo eh patronoo do harry potter"
else:
mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- ERROR:
File "XXXX", line 5
    if: (harry =="carvo"):
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:14:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")
if(harry =="carvo"):
	mensagem = "cervo eh patronoo do harry potter"
else:
mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem = "nao eh patrono do harry"  
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:14:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	mensagem = "cervo eh patronoo do harry potter"
else:
mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- ERROR:
File "XXXX", line 9
    mensagem = "nao eh patrono do harry"  
           ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:15:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "cervo eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo nao eh patrono do harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:15:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "cervo eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- EXECUTION TIME:
0.154079
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:15:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "cervo eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo nao eh patrono do harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:16:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo nao eh patrono do harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:16:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo nao eh patrono do harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:16:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- EXECUTION TIME:
0.127705
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo nao eh patrono do harry
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:16:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="carvo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo nao eh patrono do harry
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo eh patronoo do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:17:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- EXECUTION TIME:
0.188292
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patronoo do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patronoo do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo eh patronoo do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:17:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:18:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- OUTPUT:
cervo eh patrono do harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:18:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- EXECUTION TIME:
0.177654
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:18:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do harry potter"
else:
	
   mensagem = "nao eh patrono do harry"  

print(harry, mensagem)
-- EXECUTION TIME:
0.141178
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 19:19:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do Harry Potter"
else:
	
   mensagem = "nao eh patrono do Harry Potter"  

print(harry, mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:19:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do Harry Potter"
else:
	
   mensagem = "nao eh patrono do Harry Potter"  

print(harry, mensagem)
-- EXECUTION TIME:
0.202731
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 19:27:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
harry =input("entre com patrono")

if(harry =="cervo"):
	
	mensagem = "eh patrono do Harry Potter"
else:
	
   mensagem = "nao eh patrono do Harry Potter"  

print(harry, mensagem)
-- EXECUTION TIME:
0.167549
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
